# kremis

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  kremis.toml
.github/: cliff.toml  dependabot.yml
.github/workflows/: ci.yml  release.yml
_archive/: .editorconfig  deny.toml
_archive/cortex/: .gitignore  README.md  pyproject.toml
_archive/cortex/examples/: __init__.py  fact_retrieval.py  inference_demo.py  uncertainty_demo.py
_archive/cortex/kremis_cortex/: __init__.py  cli.py  client.py  cortex.py  honesty_protocol.py
_archive/cortex/tests/: __init__.py  conftest.py  test_cli.py  test_client.py  test_cortex.py  test_honesty_protocol.py
_archive/dev-docs/: AGENTS.md  INTEGRAZIONI_FUTURE.md  KREMIS.md  PROMPT.md
_archive/kremis-sdk/: Cargo.toml
_archive/kremis-sdk/examples/: basic_client.rs  batch_signals.rs
_archive/kremis-sdk/src/: lib.rs
_archive/kremis-sdk/tests/: integration_tests.rs
apps/kremis/: Cargo.toml
apps/kremis/src/: lib.rs  main.rs
apps/kremis/src/api/: auth.rs  handlers.rs  middleware.rs  mod.rs  types.rs
apps/kremis/src/cli/: commands.rs  mod.rs
apps/kremis/tests/: api_tests.rs  cli_tests.rs  types_tests.rs
crates/kremis-core/: Cargo.toml
crates/kremis-core/benches/: graph_bench.rs
crates/kremis-core/src/: cache.rs  compositor.rs  confidence.rs  export.rs  graph.rs  grounding.rs  ingestor.rs  lib.rs  mutation.rs  primitives.rs  query.rs  response.rs  session.rs
crates/kremis-core/src/formats/: mod.rs  persistence.rs
crates/kremis-core/src/storage/: mod.rs  redb_graph.rs
crates/kremis-core/src/system/: mod.rs  stage.rs
crates/kremis-core/src/types/: mod.rs
crates/kremis-core/tests/: property_tests.rs  validation_tiers.rs
dev-docs/: CLAUDE.md  ROADMAP.md
docs/: API.md  ARCHITECTURE.md  CLI.md  openapi.yml
docs/api/: health.mdx  overview.mdx  query-intersect.mdx  query-lookup.mdx  query-path.mdx  query-properties.mdx  query-related.mdx  query-traverse.mdx
docs/logo/: LICENSE
examples/: demo_honesty.py  sample_signals.json  sample_signals.txt
