[project]
name = "kremis-cortex"
version = "0.1.0"
description = "Cortex - Honest AGI layer for Kremis"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "M2Dr3g0n"}]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-httpx>=0.34",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
    "mypy>=1.8",
    "ruff>=0.4",
]

[project.scripts]
kremis-cortex = "kremis_cortex.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kremis_cortex"]

# =============================================================================
# PYTEST CONFIGURATION (L5 FIX)
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
asyncio_mode = "auto"
markers = [
    "asyncio: marks tests as async",
]

# =============================================================================
# COVERAGE CONFIGURATION (L5 FIX)
# =============================================================================

[tool.coverage.run]
source = ["kremis_cortex"]
branch = true
omit = [
    "*/tests/*",
    "*/site-packages/*",
    "examples/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
precision = 2
skip_covered = false
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
