# =============================================================================
# KREMIS-SDK - THE KIT
# =============================================================================
#
# This crate provides helper types and utilities for building Kremis plugins.
#
# Plugins are external processes (Python, Rust, etc.) that communicate with
# the Kremis server via HTTP. This SDK provides:
# - Request/Response types that match the HTTP API
# - HTTP client helpers
# - Type-safe signal construction
#
# ARCHITECTURAL NOTES:
# - Plugins run as separate processes
# - Communication is via HTTP only (no direct Rust linking)
# - This SDK is optional - plugins can use raw HTTP if preferred
# =============================================================================

[package]
name = "kremis-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SDK for building Kremis plugins - THE KIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"

# =============================================================================
# CLIPPY LINTS
# =============================================================================

[lints.clippy]
# SDK follows same strict standards (per AGENTS.md Section 5.8)
float_arithmetic = "deny"
unwrap_used = "deny"
panic = "deny"
# Allowed for SDK ergonomics
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
similar_names = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
uninlined_format_args = "allow"
